--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = ../enyo-webos.git
 [submodule "lib/ilib"]
 	path = lib/ilib
-	url = git@github.com:enyojs/enyo-ilib.git
+	url = ..//enyo-ilib.git
