GF-6936: Update title. Enyo-DCO-1.1-Signed-off-by: Kevin Schaaf <kevin.schaaf@lge.com>

--- a/appinfo.json
+++ b/appinfo.json
@@ -4,7 +4,7 @@
 	"vendor": "My Company",
 	"type": "web",
 	"main": "index.html",
-	"title": "singlepane",
+	"title": "On Device Enyo Test",
 	"icon": "icon.png",
 	"uiRevision":2,
 	"onDeviceSource": {
