--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "lib/moonstone"]
 	path = lib/moonstone
-	url = ../moonstone.git
+	url = ../../enyojs/moonstone.git
 [submodule "lib/spotlight"]
 	path = lib/spotlight
-	url = ../spotlight.git
+	url = ../../enyojs/spotlight.git
 [submodule "lib/layout"]
 	path = lib/layout
-	url = ../layout.git
+	url = ../../enyojs/layout.git
 [submodule "enyo"]
 	path = enyo
-	url = ../enyo.git
+	url = ../../enyojs/enyo.git
 [submodule "lib/enyo-cordova"]
 	path = lib/enyo-cordova
-	url = ../enyo-cordova.git
+	url = ../../enyojs/enyo-cordova.git
 [submodule "lib/enyo-webos"]
 	path = lib/enyo-webos
-	url = ../enyo-webos.git
+	url = ../../enyojs/enyo-webos.git
 [submodule "lib/enyo-ilib"]
 	path = lib/enyo-ilib
-	url = ../enyo-ilib.git
+	url = ../../enyojs/enyo-ilib.git
