Add .enyoconfig, delete .bowerrc

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "lib/enyo"]
+	path = lib/enyo
+	url = ../../enyojs/enyo.git
 [submodule "lib/moonstone"]
 	path = lib/moonstone
 	url = ../../enyojs/moonstone.git
